GMP does not use the standard variable includedir to install the headers. Hence, we move the file manually.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -107,8 +107,9 @@ bin/ecl-config: bin/ecl-config.pre
 	fi
 @LIBPREFIX@eclgmp.@LIBEXT@:
 	if (echo $(SUBDIRS) | grep gmp); then \
-	  cd gmp; $(MAKE) install; \
-	  mv ../@LIBPREFIX@gmp.@LIBEXT@ ../@LIBPREFIX@eclgmp.@LIBEXT@; \
+	  cd gmp && $(MAKE) install && \
+	  cd .. && mv h/gmp.h ecl/ && rmdir h &&  \
+	  mv ./@LIBPREFIX@gmp.@LIBEXT@ ./@LIBPREFIX@eclgmp.@LIBEXT@; \
 	fi
 sysfun.lsp:
 	$(LN_S) $(srcdir)/cmp/sysfun.lsp ./
