Support for unicode strings as data structure (no clever handling of characters yet) contributed by Brian Spilsbury.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -19,6 +19,9 @@
 /* Always use CLOS							*/
 #define CLOS
 
+/* put this into configure where it belongs */
+#define ECL_UNICODE
+
 /* Use Boehm's garbage collector					*/
 #undef GBC_BOEHM
 #ifdef GBC_BOEHM
