--- a/src/configure.in
+++ b/src/configure.in
@@ -165,6 +165,18 @@ AC_ARG_ENABLE(unicode,
                   [enable support for unicode (default=NO)]),
   [], [enable_unicode=no])
 
+AC_ARG_ENABLE(longdouble,
+  AS_HELP_STRING( [--enable-long-double],
+                  [include support for long double]
+                  [(default=NO)]),
+  [longdouble=${enableval}], [longdouble=no])
+
+AC_ARG_ENABLE(c99complex,
+  AS_HELP_STRING( [--enable-c99-complex],
+                  [include support for C complex type]
+                  [(default=NO)]),
+  [c99complex=${enableval}], [c99complex=no])
+
 dnl -----------------------------------------------------------------------
 dnl Installation directories
 libdir="${libdir}/ecl"
@@ -378,6 +390,14 @@ ECL_FIND_SETJMP
 ECL_FILE_STRUCTURE
 ECL_FFI
 ECL_FPE_MODEL
+
+if test "$enable_longdouble" != "no" ; then
+AC_CHECK_TYPES([long double])
+fi
+if test "$enable_c99complex" != "no" ; then
+AC_CHECK_TYPES([double complex, float complex],[],[],[#include <complex.h>])
+fi
+
 
 dnl -----------------------------------------------------------------------
 dnl Study the call conventions
