--- a/src/configure.in
+++ b/src/configure.in
@@ -431,6 +431,9 @@ dnl !!! end autoscan
 AC_CHECK_FUNCS( [nanosleep alarm times isnanf select setenv putenv] \
                 [lstat mkstemp sigprocmask isatty feenableexcept tzset] )
 
+AC_CHECK_FUNCS( [expf logf sqrtf cosf sinf tanf sinhf coshf tanhf] \
+		[floorf ceilf fabsf frexpf ldexpf])
+
 dnl =====================================================================
 dnl Checks for system services
 
