--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -224,6 +224,7 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 /* the tzset() function gets the current time zone			*/
 #undef HAVE_TZSET
 /* several floating point functions (ISO C99)				*/
+#if 0
 #undef HAVE_EXPF
 #undef HAVE_LOGF
 #undef HAVE_SQRTF
@@ -233,6 +234,7 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #undef HAVE_SINHF
 #undef HAVE_COSHF
 #undef HAVE_TANHF
+#endif
 #undef HAVE_FLOORF
 #undef HAVE_CEILF
 #undef HAVE_FABSF
