--- a/msvc/c/Makefile
+++ b/msvc/c/Makefile
@@ -42,8 +42,7 @@ HFILES	= ..\ecl\config.h $(HDIR)\ecl.h $(HDIR)\ecl-cmp.h\
 	$(HDIR)\object.h $(HDIR)\cs.h $(HDIR)\stacks.h\
 	$(HDIR)\external.h $(HDIR)\eval.h\
 	$(HDIR)\number.h $(HDIR)\page.h $(HDIR)\unify.h\
-	$(HDIR)\lwp.h $(HDIR)\internal.h $(HDIR)\ecl-inl.h\
-	$(HDIR)\bytecodes.h
+	$(HDIR)\internal.h $(HDIR)\ecl-inl.h $(HDIR)\bytecodes.h
 
 OBJS	= main.obj symbol.obj package.obj list.obj\
 	apply.obj eval.obj interpreter.obj compiler.obj disassembler.obj \
