--- a/src/configure.in
+++ b/src/configure.in
@@ -579,7 +579,8 @@ else
     fi
     if mkdir gmp; then
      ECL_GMP_HEADER='ecl/gmp.h'
-     (destdir=`${PWDCMD}`; cd gmp; CC="${CC} ${PICFLAG}" \
+     dnl Notice we need -DPIC to force the assembler to generate PIC code
+     (destdir=`${PWDCMD}`; cd gmp; CC="${CC} ${PICFLAG} -DPIC" \
        $srcdir/gmp/configure --disable-shared --prefix=${destdir} \
 	--infodir=${destdir}/doc --includedir=${destdir}/ecl \
         --libdir=${destdir} --build=${gmp_build} --host=${host_alias} $with_gmp)
