--- a/src/gmp/Makefile.in
+++ b/src/gmp/Makefile.in
@@ -129,7 +129,7 @@ am__DEPENDENCIES_2 = mpz/abs$U.lo mpz/add$U.lo mpz/add_ui$U.lo \
 	mpz/mod$U.lo mpz/mul$U.lo mpz/mul_2exp$U.lo mpz/mul_si$U.lo \
 	mpz/mul_ui$U.lo mpz/n_pow_ui$U.lo mpz/neg$U.lo \
 	mpz/nextprime$U.lo mpz/out_raw$U.lo mpz/out_str$U.lo \
-	mpz/perfpow$U.lo mpz/perfsqr$U.lo \
+	mpz/perfpow$U.lo mpz/perfsqr$U.lo mpz/popcount$U.lo \
 	mpz/pow_ui$U.lo mpz/powm$U.lo mpz/powm_ui$U.lo \
 	mpz/pprime_p$U.lo mpz/random$U.lo mpz/random2$U.lo \
 	mpz/realloc$U.lo mpz/realloc2$U.lo mpz/remove$U.lo \
@@ -533,7 +533,7 @@ MPZ_OBJECTS = mpz/abs$U.lo mpz/add$U.lo mpz/add_ui$U.lo			\
   mpz/mul_si$U.lo mpz/mul_ui$U.lo					\
   mpz/n_pow_ui$U.lo mpz/neg$U.lo mpz/nextprime$U.lo			\
   mpz/out_raw$U.lo mpz/out_str$U.lo mpz/perfpow$U.lo mpz/perfsqr$U.lo	\
-  mpz/pow_ui$U.lo mpz/powm$U.lo mpz/powm_ui$U.lo	\
+  mpz/popcount$U.lo mpz/pow_ui$U.lo mpz/powm$U.lo mpz/powm_ui$U.lo	\
   mpz/pprime_p$U.lo mpz/random$U.lo mpz/random2$U.lo			\
   mpz/realloc$U.lo mpz/realloc2$U.lo mpz/remove$U.lo			\
   mpz/root$U.lo mpz/rootrem$U.lo mpz/rrandomb$U.lo mpz/scan0$U.lo	\
