--- a/msvc/gc/Makefile
+++ b/msvc/gc/Makefile
@@ -2,7 +2,8 @@
 # DLLs are included in the root set under NT, but not under win32S.
 # Use "nmake nodebug=1 all" for optimized versions of library, gctest and editor.
 
-CPU= i386
+MY_CPU=X86
+CPU=$(MY_CPU)
 !include <ntwin32.mak>
 
 srcdir = ..\..\src\gc
@@ -17,20 +18,26 @@ THREADS_FLAGS=
 
 MFLAGS = /MD
 
-OBJS= alloc.obj reclaim.obj allchblk.obj misc.obj mach_dep.obj os_dep.obj mark_rts.obj headers.obj mark.obj obj_map.obj blacklst.obj finalize.obj new_hblk.obj dbg_mlc.obj malloc.obj stubborn.obj dyn_load.obj typd_mlc.obj ptr_chck.obj gc_cpp.obj mallocx.obj $(THREADS_OBJ)
+OBJS= alloc.obj reclaim.obj allchblk.obj misc.obj mach_dep.obj os_dep.obj mark_rts.obj headers.obj mark.obj obj_map.obj blacklst.obj finalize.obj new_hblk.obj dbg_mlc.obj malloc.obj stubborn.obj dyn_load.obj typd_mlc.obj ptr_chck.obj gc_cpp.obj mallocx.obj
 
 all: gctest.exe cord\de.exe test_cpp.exe
 
 {$(srcdir)}.c{}.obj:
 	$(cc) $(MFLAGS) $(cdebug) $(cflags) $(cvars) -I$(srcdir)\include -DSILENT -DALL_INTERIOR_POINTERS -D__STDC__ -DGC_DLL -DGC_BUILD -DLARGE_CONFIG $(THREADS_FLAGS) $< /Fo$*.obj
 
+{$(srcdir)\tests}.c{tests}.obj:
+	$(cc) $(MFLAGS) $(cdebug) $(cflags) $(cvars) -I$(srcdir)\include -DSILENT -DALL_INTERIOR_POINTERS -D__STDC__ -DGC_DLL -DGC_BUILD -DLARGE_CONFIG $(THREADS_FLAGS) $< /Fo$*.obj
+
+#.c.obj:
+#	$(cc) $(cdebug) $(cflags) $(cvars) -Iinclude -DSILENT -DALL_INTERIOR_POINTERS -D__STDC__ -DGC_NOT_DLL -DGC_BUILD $*.c /Fo$*.obj
+#
 .cpp.obj:
-	$(cc) $(MFLAGS) $(cdebug) $(cflags) $(cvars) -I$(srcdir)\include -DSILENT -DALL_INTERIOR_POINTERS -DGC_DLL -DGC_BUILD -DLARGE_CONFIG $(THREADS_FLAGS) $*.CPP /Fo$*.obj
+	$(cc) $(cdebug) $(cflags) $(cvars) -I$(srcdir)\include -DSILENT -DALL_INTERIOR_POINTERS -DGC_NOT_DLL -DGC_BUILD $*.CPP /Fo$*.obj
 
 $(OBJS) tests\test.obj: $(srcdir)\include\private\gc_priv.h $(srcdir)\include\private\gc_hdrs.h $(srcdir)\include\gc.h $(srcdir)\include\private\gcconfig.h $(srcdir)\include\private\gc_locks.h $(srcdir)\include\private\gc_pmark.h $(srcdir)\include\gc_mark.h
 
 gc.lib: $(OBJS)
-	link -lib /MACHINE:i386 /out:gc.lib $(OBJS)
+	lib /MACHINE:i386 /out:gc.lib $(OBJS)
 # The original NT SDK used lib32 instead of lib
 
 gctest.exe: tests\test.obj gc.lib
@@ -42,12 +49,12 @@ gctest.exe: tests\test.obj gc.lib
 #	mapsympe -n -o gctest.sym gctest.exe
 
 cord\de_win.rbj: cord\de_win.res
-	cvtres -$(CPU) cord\de_win.res -o cord\de_win.rbj
+	cvtres /MACHINE:$(MY_CPU) /OUT:cord\de_win.rbj cord\de_win.res
 
-cord\de.obj cord\de_win.obj: include\cord.h include\private\cord_pos.h cord\de_win.h cord\de_cmds.h
+cord\de.obj cord\de_win.obj: $(srcdir)\include\cord.h $(srcdir)\include\private\cord_pos.h cord\de_win.h cord\de_cmds.h
 
 cord\de_win.res: cord\de_win.rc cord\de_win.h cord\de_cmds.h
-	$(rc) $(rcvars) -r -fo cord\de_win.res $(cvarsdll) cord\de_win.rc
+	$(rc) $(rcvars) -r -fo cord\de_win.res $(cvars) cord\de_win.rc
 
 # Cord/de is a real win32 gui application.
 cord\de.exe: cord\cordbscs.obj cord\cordxtra.obj cord\de.obj cord\de_win.obj cord\de_win.rbj gc.lib
@@ -56,17 +63,16 @@ cord\de.exe: cord\cordbscs.obj cord\cordxtra.obj cord\de.obj cord\de_win.obj cor
 gc_cpp.obj: $(srcdir)\include\gc_cpp.h $(srcdir)\include\gc.h
 
 gc_cpp.cpp: $(srcdir)\gc_cpp.cc
-	copy $(srcdir)\gc_cpp.cc gc_cpp.cpp
+	copy $? $@
 
-test_cpp.cpp: tests\test_cpp.cc
-	copy tests\test_cpp.cc test_cpp.cpp
+test_cpp.cpp: $(srcdir)\tests\test_cpp.cc
+	copy $? $@
 
 # This generates the C++ test executable.  The executable expects
 # a single numeric argument, which is the number of iterations.
 # The output appears in the file "gc.log".
-test_cpp.exe: test_cpp.obj include\gc_cpp.h include\gc.h gc.lib
+test_cpp.exe: test_cpp.obj $(srcdir)\include\gc_cpp.h $(srcdir)\include\gc.h gc.lib
 	$(link) -debug:full -debugtype:cv $(guiflags) -stack:16384 -out:test_cpp.exe test_cpp.obj gc.lib $(guilibs)
-
 
 clean:
 	-del gc.lib
