Remove obsolete flag

--- a/msvc/Makefile
+++ b/msvc/Makefile
@@ -57,7 +57,7 @@ TAR_DIR = %%CD%%\ecl-$(ECL_VERSION)
 
 CC	= cl
 MFLAGS  = -MD
-CFLAGS  = -GX -DGC_DLL -nologo
+CFLAGS  = -EHsc -DGC_DLL -nologo
 LIBS	= eclgc.lib eclgmp.lib user32.lib ws2_32.lib shell32.lib
 LDFLAGS	= /link /nodefaultlib:libcmt /nodefaultlib:libcmtd /nodefaultlib:libc /nodefaultlib:libd
 SHARED_LDFLAGS = -LD
@@ -368,7 +368,7 @@ clean_ecl:
 	-for %i in (eclgc.lib eclgmp.lib lsp\config.lsp compile.lsp bare.lsp \
 	            lsp\load.lsp clos\load.lsp cmp\load.lsp cmp\cmpdefs.lsp \
 		    ecl.lib ecl.dll ecl_min$(EXE) eclmin.lib help.doc sysfun.lsp BUILD-STAMP \
-		    $(TARGETS) *.exp *.ilk *.pdb *.c *.obj ecl-config.bat ecl-static.lib) \
+		    $(TARGETS) *.exp *.ilk *.manifest *.pdb *.c *.obj ecl-config.bat ecl-static.lib) \
 	     do $(RM) %i
 	cd c
 	-$(MAKE) "ECL_THREADS = $(ECL_THREADS)" clean
