Fixed build problems of GMP under mingw

--- a/src/configure.in
+++ b/src/configure.in
@@ -580,9 +580,9 @@ else
     if mkdir gmp; then
      ECL_GMP_HEADER='ecl/gmp.h'
      dnl Notice we need -DPIC to force the assembler to generate PIC code
-     (destdir=`${PWDCMD}`; cd gmp; CC="${CC} ${PICFLAG} -DPIC" \
+     (destdir=`${PWDCMD}`; cd gmp; CC="${CC} ${PICFLAG}" \
        $srcdir/gmp/configure --disable-shared --prefix=${destdir} \
-	--infodir=${destdir}/doc --includedir=${destdir}/ecl \
+	--infodir=${destdir}/doc --includedir=${destdir}/ecl --with-pic \
         --libdir=${destdir} --build=${gmp_build} --host=${host_alias} $with_gmp)
     fi
   fi
