Thread flags fixed for Hurd

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -331,7 +331,7 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #include "@ECL_FPE_CODE@"
 
 #if defined(ECL_THREADS)
-# if defined(darwin) || defined(freebsd)
+# if defined(darwin) || defined(freebsd) || defined(gnu)
 #  define PTHREAD_MUTEX_ERRORCHECK_NP PTHREAD_MUTEX_ERRORCHECK
 #  define PTHREAD_MUTEX_RECURSIVE_NP PTHREAD_MUTEX_RECURSIVE
 #  define PTHREAD_MUTEX_NORMAL_NP PTHREAD_MUTEX_NORMAL
