--- a/src/configure.in
+++ b/src/configure.in
@@ -361,7 +361,7 @@ AC_CHECK_HEADERS( [fcntl.h inttypes.h limits.h netdb.h netinet/in.h] \
 dnl !!! end autoscan
 
 AC_CHECK_HEADERS( [sys/resource.h sys/utsname.h float.h pwd.h dlfcn.h link.h] \
-                  [mach-o/dyld.h ulimit.h dirent.h sys/ioctl.h])
+                  [mach-o/dyld.h ulimit.h dirent.h sys/ioctl.h sys/select.h])
 
 dnl =====================================================================
 dnl Checks for typedefs, structures, and compiler characteristics.
